--- a/options.html
+++ b/options.html
@@ -18,6 +18,7 @@
       font-weight: bold;
     }
     input[type="text"],
+    input[type="password"],
     select {
       width: 100%;
       padding: 8px;
@@ -63,7 +64,7 @@
   
   <div class="form-group">
     <label for="apiKey">Google Cloud API Key:</label>
-    <input type="text" id="apiKey" placeholder="Enter your Google Cloud API Key">
+    <input type="password" id="apiKey" placeholder="Enter your Google Cloud API Key">
   </div>
   
   <div class="form-group">
@@ -78,19 +79,18 @@
   <div class="form-group">
     <label for="voice">Voice:</label>
     <select id="voice">
-      <!-- Will be populated based on selected language -->
     </select>
   </div>
   
   <div class="form-group">
-    <label for="pitch">Pitch (0.25 to 4.0):</label>
-    <input type="range" id="pitch" min="0.25" max="4.0" step="0.1" value="1.0">
+    <label for="pitch">Pitch (0.2 to 4.0):</label>
+    <input type="range" id="pitch" min="0.20" max="4.0" step="0.1" value="1.0">
     <span id="pitchValue">1.0</span>
   </div>
   
   <div class="form-group">
-    <label for="rate">Speaking Rate (0.25 to 4.0):</label>
-    <input type="range" id="rate" min="0.25" max="4.0" step="0.1" value="1.0">
+    <label for="rate">Speaking Rate (0.2 to 4.0):</label>
+    <input type="range" id="rate" min="0.20" max="4.0" step="0.1" value="1.0">
     <span id="rateValue">1.0</span>
   </div>
   
